@@ -37,7 +37,7 @@ public class GameHoldRemoveChange extends GameObjectChange {
 //		return false;
 //	}
 	public void setHoldId(long val) {
-		holdId = new Long(val);
+		holdId = Long.valueOf(val);
 	}
 	protected void applyChange(GameData data,GameObject go) {
 		GameObject toRemove = data.getGameObject(holdId);
