@@ -64,7 +64,7 @@ public class Score {
 	}
 	public int getBasicScore() {
 		double val = (double)getScore()/(double)getMultiplier();
-		return (new Double(Math.floor(val))).intValue();
+		return (Double.valueOf(Math.floor(val))).intValue();
 	}
 	public int getBonusScore() {
 		return vps>0?(getBasicScore()*vps):0;
@@ -81,7 +81,7 @@ public class Score {
 			p -= ownedPoints;
 		}
 		double val = p/getMultiplier();
-		int earnedVps = (new Double(Math.floor(val))).intValue();
+		int earnedVps = (Double.valueOf(Math.floor(val))).intValue();
 		if (restrictToAssigned) {
 			if (vps>0) {
 				earnedVps = Math.min(earnedVps,vps); // only get credit for the number of points you've assigned
@@ -95,9 +95,9 @@ public class Score {
 	public static void printResult(int score,int mult) {
 		double val = (double)score/(double)mult;
 		System.out.println("("+score+"/"+mult+")="+val);
-		System.out.println("Math.floor("+score+"/"+mult+")="+new Double(Math.floor(val)).intValue());
-		System.out.println("Math.ceil("+score+"/"+mult+")="+new Double(Math.ceil(val)).intValue());
-		System.out.println("Math.round("+score+"/"+mult+")="+new Double(Math.round(val)).intValue());
+		System.out.println("Math.floor("+score+"/"+mult+")="+Double.valueOf(Math.floor(val)).intValue());
+		System.out.println("Math.ceil("+score+"/"+mult+")="+Double.valueOf(Math.ceil(val)).intValue());
+		System.out.println("Math.round("+score+"/"+mult+")="+Double.valueOf(Math.round(val)).intValue());
 	}
 	public static void main(String[] args) {
 		printResult(-1,30);
